@@ -1,3 +1,9 @@
+Wed May 23 23:21:03 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed formatted nickname renaming to rename also irssi's
+	  nicklist (/NAMES etc).  Affected file is
+	  apps/irssi/src/silc/core/client_ops.c.
+
 Tue May 22 17:18:54 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* For SILC Client and SILC Server check for 1.1 Toolkit
